--- a/sweeps/vqa-aug/scl/joint/unfil/best-unfil-ref-10-no-wd.yml
+++ b/sweeps/vqa-aug/scl/joint/unfil/best-unfil-ref-10-no-wd.yml
@@ -20,23 +20,23 @@ TASK19:
   grad_clip_mode: all
   max_grad_norm: 0.25
   # weight-decay (doesn't apply on batch-norm and biases)
-  weight_decay: 0.00001
+  weight_decay: 0.0000
 
   # optimizer
   optim: Adam
   lr_scheduler: pythia_warmup_decay
-  lr: 0.0004
+  warmup_iters: 4266 # 2 epochs
+  lr: 0.0002
   warmpu_factors: 0.1
-  warmup_iters: 2133 # 2 epochs
-  lr_decay_iters: [5332, 7415] # 5, 7 epochs
+  lr_decay_iters: [10665, 14931] # 5, 7 epochs
   lr_decay: 0.2
   debug: false
   # model attributes
   model_type: m4c
   num_hidden_layers: 6
   contrast_out_dim: 128
-  batch_size: 400
-  val_batch_size: 400
+  batch_size: 210
+  val_batch_size: 210
   monitor_value: val_score
 
   # loss attributes
@@ -60,15 +60,15 @@ TASK19:
   scl_coeff: 1.0
   aug_filter:
     max_re_per_sample: 4
-    sim_threshold: -1.0
-    sampling: top
+    sim_threshold: 0.95
+    sampling: top # top (selects max_re_per_sample samples from top after thresholding), bottom and random
   sampler_type: new
-  init_batch_size: 20 # 41 + 2x41
+  init_batch_size: 10 # 41 + 2x41
   neg_type_weights: [0.25, 0.25, 0.5]
   neg_question_thresh: 210
   scl_mask_thresh: -1
-  scl_mask_rescale_factor: 40
+  scl_mask_rescale_factor: 20
   scl_random_sampler: false
   alt_train: true
   alt_re: false
-  ce_freq: 3
+  ce_freq: 4
