--- a/sweeps/vqa-aug/scl/latest/unfil-scl-finetune.yml
+++ b/sweeps/vqa-aug/scl/latest/unfil-scl-finetune.yml
@@ -50,14 +50,14 @@ TASK19:
   # min. frequency needed to be sampled as a positive
   freq_ans_threshold: 4
   # use CE loss
-  use_ce_loss: false
+  use_ce_loss: true
   # don't use negative sampler for validation
   val_neg_sampler: false
   # turn on revqa eval
   revqa_eval: true
   val_workers: 16
   train_workers: 16
-  scl_coeff: 1.0
+  scl_coeff: 0.0
   aug_filter:
     max_re_per_sample: 4
     sim_threshold: 0.95
@@ -68,7 +68,7 @@ TASK19:
   neg_question_thresh: 210
   scl_mask_thresh: -1
   scl_mask_rescale_factor: -1
-  scl_random_sampler: false
+  scl_random_sampler: true
   alt_train: false
   alt_re: false
   ce_freq: -1
