--- a/configs/baseline-trainval.yml
+++ b/configs/baseline-trainval.yml
@@ -28,15 +28,14 @@ TextBERT:
 
 
 # experiment configuration
-dataroot: datasets/VQA/
-trainval_features_path: /srv/testing/ykant3/vqa/COCO_trainval_resnext152_faster_rcnn_genome.lmdb  # image-features
-test_features_path: /srv/testing/ykant3/vqa/COCO_test_resnext152_faster_rcnn_genome.lmdb  # image-features
+trainval_features_path: data-release/image-features/COCO_trainval_resnext152_faster_rcnn_genome.lmdb  # image-features
+test_features_path: data-release/image-features/COCO_test_resnext152_faster_rcnn_genome.lmdb  # image-features
 
 
 # training and evaluation data
 # revqa: human rephrasings set ,revqa-bt: back-translated rephrasings set
 val_split: [minval, revqa, revqa_bt, val, test]
-train_split: train
+train_split: trainval_aug
 aug_filter:  # rephrasings filter
   num_rephrasings: 4
   sim_threshold: 0.95
@@ -55,33 +54,13 @@ lr: 0.0002
 warmup_factor: 0.1
 lr_decay_iters: [10665, 14931]
 lr_decay: 0.2
-alt_train: true  # sets alternate training
+alt_train: false  # sets alternate training
 ce_freq: 4  # use 1 scl and 3 ce iterations
 seed: 0
 batch_size: 210
-monitor_value: val_score
+monitor_value: vqa_score
 workers: 16
 revqa_eval: true
-
-
-# contrastive sampling
-num_positives: 1 # num of positives per sample
-bin_ans_threshold: 4
-freq_ans_threshold: 4
-init_batch_size: 10
-neg_type_weights: [0.25, 0.25, 0.5]
-neg_question_thresh: 210
-contrastive: better
-
-
-# scaled contrastive loss
-scl_mask_rescale_factor: 20
-base_temperature: 0.07
-temperature: 0.5
-loss: SCLLoss
-scl_formulation: "normal"
-
-
-debug: true
 two_norm: false
 freeze_textbert_and_mmt: false
+
