--- a/sweeps/tvqa-val/m4c-spatial-mask-1-2-layers-4-share3-train-ts-val-t-debug.yml
+++ b/sweeps/tvqa-val/m4c-spatial-mask-1-2-layers-4-share3-train-ts-val-t-debug.yml
@@ -1,61 +1,87 @@
-TASK19:
-  name: TextVQA
-  type: V-logit
-  loss: TextVQALoss
-  process: normal
-  task_id: 19
+name: TextVQA
+type: V-logit
+loss: TextVQALoss
+process: normal
+task_id: 19
 
-  # remove later
-  dataroot: datasets/textvqa
-  stvqa_dataroot: datasets/stvqa
+# remove later
+dataroot: datasets/textvqa
+stvqa_dataroot: datasets/stvqa
 
-  # TextVQA
-  textvqa_obj: "/srv/share/ykant3/tvqa-release/textvqa/tvqa_{}_obj.lmdb"
-  textvqa_ocr: "/srv/share/ykant3/tvqa-release/textvqa/tvqa_{}_ocr.lmdb"
-  textvqa_spatial_cache: "/srv/share/ykant3/tvqa-release/textvqa/tvqa_{}_spat_cache.pkl"
-  textvqa_imdb: "/srv/share/ykant3/tvqa-release/textvqa/tvqa_{}_imdb.npy"
+# TextVQA
+textvqa_obj: "/srv/share/ykant3/tvqa-release/textvqa/tvqa_{}_obj.lmdb"
+textvqa_ocr: "/srv/share/ykant3/tvqa-release/textvqa/tvqa_{}_ocr.lmdb"
+textvqa_spatial_cache: "/srv/share/ykant3/tvqa-release/textvqa/tvqa_{}_spat_cache.pkl"
+textvqa_imdb: "/srv/share/ykant3/tvqa-release/textvqa/tvqa_{}_imdb.npy"
 
 
-  # STVQA
-  stvqa_obj: "/srv/share/ykant3/tvqa-release/stvqa/stvqa_{}_obj.lmdb"
-  stvqa_ocr: "/srv/share/ykant3/tvqa-release/stvqa/stvqa_{}_ocr.lmdb"
-  stvqa_spatial_cache: "/srv/share/ykant3/tvqa-release/stvqa/stvqa_{}_spat_cache.pkl"
-  stvqa_imdb: "/srv/share/ykant3/tvqa-release/stvqa/stvqa_{}_imdb.npy"
+# STVQA
+stvqa_obj: "/srv/share/ykant3/tvqa-release/stvqa/stvqa_{}_obj.lmdb"
+stvqa_ocr: "/srv/share/ykant3/tvqa-release/stvqa/stvqa_{}_ocr.lmdb"
+stvqa_spatial_cache: "/srv/share/ykant3/tvqa-release/stvqa/stvqa_{}_spat_cache.pkl"
+stvqa_imdb: "/srv/share/ykant3/tvqa-release/stvqa/stvqa_{}_imdb.npy"
 
-  max_seq_length: 20
-  max_obj_num: 100 # object features + avg feature
-#  max_resnet_num: 100 # grid features + avg feature
-  max_ocr_num: 50 # ocr tokens + avg feature
-  batch_size: 96
-  train_split: train
-  val_split: val
-  lr: 0.0001
-  num_epoch: 100
-  max_region_num: -1 # backward compatibility
-  debug: true
-  grad_clip_mode: all
-  max_grad_norm: 0.25
-  model_type: m4c_spatial
-  # allowed quadrants to mask are 1,2,4
-  attention_mask_quadrants: [1,2]
-#  Quadrants (QUE + OCR and OBJ + DEC)
-#
-#  1 | 2 | 3
-#  ---------
-#  4 | 5 | 6
-#  ---------
-#  7 | 8 | 9
-  lr_scheduler: pythia_warmup_decay
-  optim: Adam
-  lr_decay_iters: [14000, 19000]
-  lr_decay: 0.1
-  warmup_factor: 0.2
-  warmup_iters: 1000
-  vocab_type: 5k
+max_seq_length: 20
+max_obj_num: 100 # object features + avg feature
+max_ocr_num: 50 # ocr tokens + avg feature
+batch_size: 96
+train_split: train
+val_split: val
+lr: 0.0001
+num_epoch: 100
+debug: true
+max_grad_norm: 0.25
+model_type: m4c_spatial
+optim: Adam
+lr_decay_iters: [14000, 19000]
+lr_decay: 0.1
+warmup_factor: 0.2
+warmup_iters: 1000
+vocab_type: 5k
+metric: TextVQA
+num_workers: 0
+clean_answers: true
+dynamic_sampling: true
+train_on: ["STVQA", "TextVQA"]
+val_on: ["TextVQA"]
+
+SA-M4C:
   num_hidden_layers: 2
   num_spatial_layers: 4
   heads_type: mix
-  layer_type_list: [n,n,s,s,s,s]
+  layer_type_list: [ n,n,s,s,s,s ]
   mix_list: [none, none, share3, share3, share3, share3]
-  use_datasets: ["stvqa", "textvqa"]
-  val_on: ["textvqa"]
+  obj_drop: 0.1
+  ocr_drop: 0.1
+  hidden_size: 768
+  num_spatial_relations: 12
+  type_vocab_size: 2
+  vocab_size: 30522
+  textvqa_vocab_size: 3998
+  pooling_method: "mul"
+  ptr_query_size: 768
+  ocr_feature_size: 3002
+  obj_feature_size: 2048
+  finetune_ocr_obj: false
+  use_phoc_fasttext: true
+  normalize: true
+  lr_scale_mmt: 1.0
+  num_decoding_steps: 12
+  max_obj_num: 100
+  max_ocr_num: 50
+  max_seq_length: 20
+  beam_size: 1  # while training
+  #  Quadrants (QUE + OCR-OBJ + DEC)
+  #  1 | 2 | 3
+  #  ---------
+  #  4 | 5 | 6
+  #  ---------
+  #  7 | 8 | 9
+  attention_mask_quadrants: [1,2]
+
+
+TextBERT:
+  lr_scale_text_bert: 0.1
+  num_hidden_layers: 3
+  text_bert_init_from_bert_base: true
+  vocab_size: 30522
